--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/pom.xml
@@ -5,13 +5,20 @@
   <parent>
     <groupId>org.pwsafe</groupId>
     <artifactId>jpwsafe-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.9.0-SNAPSHOT</version>
   </parent>
   <artifactId>passwordsafe-swt</artifactId>
   <packaging>jar</packaging>
 
   <name>JpwSafe SWT</name>
 
+  <repositories>
+      <repository>
+      <id>project</id>
+      <url>file://${project.basedir}/../repo</url>
+    </repository>
+  </repositories>
+  
   <dependencies>
 
     <dependency>
