--- a/branches/maven-build/passwordsafe-parent/passwordsafe-lib/.project
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-lib/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PasswordSafeLib</name>
+	<name>passwordsafe-lib</name>
 	<comment></comment>
 	<projects>
-		<project>BlowfishJ</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -11,8 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
 </projectDescription>
