--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/.project
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PasswordSafeSWT</name>
+	<name>passwordsafe-swt</name>
 	<comment></comment>
 	<projects>
-		<project>PasswordSafeLib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -12,21 +11,13 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.pde.ManifestBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.pde.SchemaBuilder</name>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.ibm.etools.ctc.javaprojectnature</nature>
-		<nature>org.eclipse.jem.beaninfo.BeanInfoNature</nature>
-		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
 </projectDescription>
