Initial simple javaFx project skeleton

--- a/branches/maven-build/passwordsafe-parent/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/pom.xml
@@ -16,6 +16,7 @@
   <modules>
     <module>passwordsafe-lib</module>
     <module>passwordsafe-swt</module>
+    <module>passwordsafe-jfx</module>
     <module>passwordsafe-build</module>
   </modules>
 
