--- a/branches/maven-build/passwordsafe-parent/passwordsafe-lib/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-lib/pom.xml
@@ -23,7 +23,6 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1.3</version>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
@@ -50,9 +49,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>    
+    </plugins>
+  </build>
 </project>
