--- a/branches/maven-build/passwordsafe-parent/passwordsafe-swt/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-swt/pom.xml
@@ -20,7 +20,6 @@
   </repositories>
   
   <dependencies>
-
     <dependency>
       <groupId>org.pwsafe</groupId>
       <artifactId>passwordsafe-lib</artifactId>
@@ -30,7 +29,6 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.1.3</version>
     </dependency>
     <dependency>
       <groupId>net.sf.opencsv</groupId>
@@ -90,11 +88,29 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
     </dependency>
-
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <classpathLayoutType>custom</classpathLayoutType>
+              <customClasspathLayout>$${artifact.groupId}.$${artifact.artifactId}.$${artifact.extension}</customClasspathLayout>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              <mainClass>org.pwsafe.passwordsafeswt.PasswordSafeJFace</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>    
+    </plugins>
+  </build>
   
   <profiles>
     <profile>
