--- a/branches/maven-build/passwordsafe-parent/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/pom.xml
@@ -13,13 +13,6 @@
   <inceptionYear>2006</inceptionYear>
   <url>http://jpwsafe.sourceforge.net/</url>
 
-  <modules>
-    <module>passwordsafe-lib</module>
-    <module>passwordsafe-swt</module>
-    <module>passwordsafe-jfx</module>
-    <module>passwordsafe-build</module>
-  </modules>
-
   <scm>
     <url>https://sourceforge.net/p/jpwsafe/code/HEAD/tree/trunk/</url>
     <connection>svn+ssh://svn.code.sf.net/p/jpwsafe/code/trunk/jpwsafe-parent</connection>
@@ -32,12 +25,13 @@
 
   <properties>
     <swt.version>3.7.2</swt.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
   <repositories>
     <repository>
       <id>swt-repo</id>
-      <url>https://swt-repo.googlecode.com/svn/repo/</url>
+      <url>https://raw.githubusercontent.com/maven-eclipse/swt-repo/master/</url>
     </repository>
     <repository>
       <id>project</id>
@@ -50,13 +44,28 @@
     </repository-->
   </repositories>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1.3</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
+          <version>3.2</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -68,26 +77,46 @@
           <version>2.16</version>
         </plugin>
         <plugin>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.6</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.4</version>
-          <!-- builds a project in each submodule -->
-           <!-- executions>
-            <execution>
-              <id>create-project-bundle</id>
-              <phase>package</phase>
-              <goals>
-                <goal>single</goal>
-              </goals>
-              <configuration>
-                <descriptorRefs>
-                  <descriptorRef>project</descriptorRef>
-                </descriptorRefs>
-              </configuration>
-            </execution>
-          </executions-->
+          <version>2.5.3</version>
         </plugin>
       </plugins>
       
     </pluginManagement>
   </build>
+  
+  <profiles>
+    <profile>
+      <id>code</id>
+      <activation>
+       <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+        <module>passwordsafe-lib</module>
+        <module>passwordsafe-swt</module>
+        <module>passwordsafe-jfx</module>
+      </modules>
+    </profile>
+        <profile>
+      <id>build</id>
+      <activation>
+       <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+        <module>passwordsafe-build</module>
+      </modules>
+    </profile>
+  </profiles>
+
+  <!-- modules>
+    <module>passwordsafe-lib</module>
+    <module>passwordsafe-swt</module>
+    <module>passwordsafe-jfx</module>
+    <module>passwordsafe-build</module>
+  </modules-->
+
 </project>
