use maxosx app builder, added win64 goal

--- a/branches/maven-build/passwordsafe-parent/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/pom.xml
@@ -25,6 +25,7 @@
 
   <properties>
     <swt.version>3.7.2</swt.version>
+    <swt.groupId>org.eclipse.swt</swt.groupId>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
