--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/pom.xml
@@ -18,7 +18,16 @@
       <url>file://${project.basedir}/../repo</url>
     </repository>
   </repositories>
-  
+
+  <modules>
+    <module>passwordsafe-build-linux32</module>
+    <module>passwordsafe-build-linux64</module>
+    <module>passwordsafe-build-win32</module>
+    <module>passwordsafe-build-win64</module>
+    <module>passwordsafe-build-mac32</module>
+    <module>passwordsafe-build-mac64</module>
+  </modules>
+      
   <dependencies>
     <dependency>
       <groupId>org.pwsafe</groupId>
@@ -26,155 +35,50 @@
       <version>${project.version}</version>
     </dependency>
     
-    <!-- native SWT jars -->
+    <!-- remove lokal environment native SWT jars, 
+      specific ones are added in submodules  -->
+      
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.gtk.linux.x86</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
     
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
     
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.cocoa.macosx</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
     
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
       <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
-    
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>assemble</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-
-            <configuration>
-              <descriptors>
-                <descriptor>src/assembly/linux-x86.xml</descriptor>
-              </descriptors>
-          
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  
-  <profiles><!-- used to exclude swt coming with the same properties in jpwsafe-swt -->
-    <profile>
-      <id>linux64</id>
-      <activation>
-        <os>
-          <family>linux</family>
-          <arch>amd64</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
-      </properties>
-    </profile>
-       <profile>
-      <id>linux</id>
-      <activation>
-        <os>
-          <family>linux</family>
-          <arch>x86</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
-      </properties>
-    </profile>
-    <profile>
-      <id>macos</id>
-      <activation>
-        <os>
-          <family>macosx</family>
-          <arch>x86</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.cocoa.macosx</swt.artifactId>
-      </properties>
-    </profile>
-        <profile>
-      <id>macos64</id>
-      <activation>
-        <os>
-          <family>macosx</family>
-          <arch>amd64</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
-      </properties>
-    </profile>
-    
-    <profile>
-      <id>windows</id>
-      <activation>
-        <os>
-          <family>windows</family>
-          <arch>x86</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
-      </properties>
-    </profile>
-        <profile>
-      <id>windows64</id>
-      <activation>
-        <os>
-          <family>windows</family>
-          <arch>amd64</arch>
-        </os>
-      </activation>
-      <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
-        <swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
-      </properties>
-    </profile>
-  </profiles>
-        <!-- swt.artifactId>org.eclipse.swt.carbon.macosx</swt.artifactId-->
 </project>
