--- a/branches/maven-build/passwordsafe-parent/passwordsafe-jfx/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-jfx/pom.xml
@@ -26,7 +26,11 @@
       <artifactId>passwordsafe-lib</artifactId>
       <version>${project.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1.3</version>
+    </dependency>
     <!-- use afterburner to get a simple dependency injection -->
     <!--
     <dependency>
