move swt resources to main/resources change mac plist entries

--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/pom.xml
@@ -40,8 +40,8 @@
           <mainClass>org.pwsafe.passwordsafeswt.PasswordSafeJFace</mainClass>
           <iconFile>PasswordSafe.icns</iconFile>
           <bundleName>PasswordSafeSWT OSX 64bit</bundleName>
-          <!-- plist adding buggy in multimodule, skip for now -->
-          <!-- dictionaryFile>PasswordSafeSWT.plist</dictionaryFile-->
+          <!-- plist adding: mvn package must be called in submodule   -->
+          <dictionaryFile>PasswordSafeSWT.plist</dictionaryFile>
         </configuration>
         <executions>
           <execution>
