--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/src/main/resources/PasswordSafeSWT.plist
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/src/main/resources/PasswordSafeSWT.plist
@@ -38,8 +38,12 @@
     <string>${jvmVersion}</string>
     <key>StartOnMainThread</key>
     <true/>
-    <key>JVMArchs</key>
-    <string>i386</string>
+    <key>JVMArches</key>
+    <string>x86_64</string>
+    <key>LSArchitecturePriority</key>
+    <array>
+      <string>x86_64</string>
+    </array>
     <key>JVMOptions</key>
     ${jvmOptions}
     <key>JVMArguments</key>
