--- a/branches/maven-build/passwordsafe-parent/passwordsafe-jfx/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-jfx/pom.xml
@@ -31,6 +31,16 @@
       <artifactId>commons-logging</artifactId>
       <version>1.1.3</version>
     </dependency>
+    <dependency>
+      <groupId>de.jensd</groupId>
+      <artifactId>fontawesomefx</artifactId>
+      <version>8.5</version>
+    </dependency>
+    <!-- ohne font awesom 35.566 / 2.027.217
+                          38.205 / 2.438.850
+         8.6 409.0 kB
+         8.5 181,5 kB  so I choosed to stay at 8.5
+         8.4 169,1 kB -->
     <!-- use afterburner to get a simple dependency injection -->
     <!--
     <dependency>
