--- a/branches/maven-build/passwordsafe-parent/passwordsafe-lib/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-lib/pom.xml
@@ -26,8 +26,8 @@
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk16</artifactId>
-      <version>1.46</version>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>1.55</version>
     </dependency>
     <dependency>
       <groupId>aws</groupId>
