--- a/branches/maven-build/passwordsafe-parent/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/pom.xml
@@ -26,14 +26,12 @@
   <properties>
     <swt.version>3.8</swt.version>
     <swt.groupId>org.eclipse.swt</swt.groupId>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   
   <repositories>
-    <!-- repository>
-      <id>swt-repo-gone</id>
-      <url>https://swt-repo.googlecode.com/svn/repo/</url>
-    </repository-->
     <repository>
       <id>swt-repo-git-old</id><!--  EOL --> 
       <url>https://github.com/maven-eclipse/swt-repo/</url>
@@ -50,11 +48,6 @@
       <id>project</id>
       <url>file://${project.basedir}/repo</url>
     </repository>
-    <!-- repository>
-      <id>thirdparty-releases</id>
-      <name>JBoss Thirdparty Releases</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
-    </repository-->
   </repositories>
 
   <dependencyManagement>
@@ -67,7 +60,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>4.12</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -87,7 +80,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.16</version>
+          <version>2.19.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -97,6 +90,11 @@
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.5.3</version>
         </plugin>
+        <plugin>
+          <groupId>sh.tak.appbundler</groupId>
+          <artifactId>appbundle-maven-plugin</artifactId>
+          <version>1.1.1</version>
+          </plugin>
       </plugins>
       
     </pluginManagement>
@@ -124,12 +122,4 @@
       </modules>
     </profile>
   </profiles>
-
-  <!-- modules>
-    <module>passwordsafe-lib</module>
-    <module>passwordsafe-swt</module>
-    <module>passwordsafe-jfx</module>
-    <module>passwordsafe-build</module>
-  </modules-->
-
 </project>
