--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win32/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win32/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>${swt.groupId}</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
-      <version>${swt.version}</version>
+      <version>4.4.2</version> <!-- last available version for swt on x86 -->
       <scope>compile</scope>
     </dependency>
     
