--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-linux32/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-linux32/pom.xml
@@ -12,6 +12,7 @@
 
   <name>JpwSafe Build Linux 32</name>
 
+
   <!-- repositories>
       <repository>
       <id>project</id>
@@ -31,6 +32,7 @@
   </dependencies>
 
   <build>
+    <finalName>PasswordSafeSWT-${project.version}</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
