--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-mac64/pom.xml
@@ -31,6 +31,7 @@
   </dependencies>
 
   <build>
+    <finalName>PasswordSafeSWT-${project.version}-mac64</finalName>
     <plugins>
       <plugin>
         <groupId>sh.tak.appbundler</groupId>
