--- a/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win64/pom.xml
+++ b/branches/maven-build/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win64/pom.xml
@@ -31,6 +31,7 @@
   </dependencies>
 
   <build>
+    <finalName>PasswordSafeSWT-${project.version}</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
