--- a/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win32/pom.xml
+++ b/passwordsafe-parent/passwordsafe-build/passwordsafe-build-win32/pom.xml
@@ -22,9 +22,8 @@
   <dependencies>   
     <!-- native SWT jar -->
     <dependency>
-      <groupId>${swt.groupId}</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
-      <version>4.4.2</version> <!-- last available version for swt on x86 -->
       <scope>compile</scope>
     </dependency>
     
