--- a/passwordsafe-parent/passwordsafe-build/pom.xml
+++ b/passwordsafe-parent/passwordsafe-build/pom.xml
@@ -39,44 +39,33 @@
       specific ones are added in submodules  -->
       
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.gtk.linux.x86</artifactId>
-      <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
-      <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
-      <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
-    
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
-      <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
-    
     <dependency>
       <groupId>org.eclipse.swt</groupId>
       <artifactId>org.eclipse.swt.cocoa.macosx</artifactId>
-      <version>4.4.2</version><!-- 4.4.2 is the last version available -->
       <scope>provided</scope>
     </dependency>
-    
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
-      <version>${swt.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
