--- a/passwordsafe-parent/passwordsafe-swt/pom.xml
+++ b/passwordsafe-parent/passwordsafe-swt/pom.xml
@@ -37,31 +37,32 @@
     </dependency>
 
     <dependency>
-      <groupId>org.eclipse.swt</groupId>
+      <groupId>${swt.groupId}</groupId>
       <artifactId>${swt.artifactId}</artifactId>
       <version>${swt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.scout.sdk.deps</groupId>
-      <artifactId>org.eclipse.jface</artifactId>
-      <version>3.12.0.v20160518-1929</version>
       <exclusions>
         <exclusion>
-          <groupId>org.eclipse.scout.sdk.deps</groupId>
-          <artifactId>org.eclipse.swt.win32.win32.x86</artifactId>
+          <groupId>org.eclipse.platform</groupId>
+          <artifactId>org.eclipse.swt</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
-      <groupId>org.eclipse.scout.sdk.deps</groupId>
+      <groupId>org.eclipse.platform</groupId>
+      <artifactId>org.eclipse.jface</artifactId>
+      <version>3.21.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.osgi</artifactId>
-      <version>3.11.0.v20160603-1336</version>
+      <version>3.16.0</version>
     </dependency>
     
     <dependency>
-      <groupId>org.eclipse.scout.sdk.deps</groupId>
+      <groupId>org.eclipse.platform</groupId>
       <artifactId>org.eclipse.equinox.preferences</artifactId>
-      <version>3.6.0.v20160120-1756</version>
+      <version>3.8.0</version>
     </dependency>
 
     <dependency>
@@ -100,7 +101,6 @@
         </os>
       </activation>
       <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
         <swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
       </properties>
     </profile>
@@ -113,16 +113,16 @@
         </os>
       </activation>
       <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
         <swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
+        <swt.version>3.108.0</swt.version>
       </properties>
     </profile>
     <profile>
       <id>macos</id>
       <activation>
         <os>
-          <family>macosx</family>
-          <arch>x86</arch>
+          <family>mac</family>
+          <arch>x86_64</arch>
         </os>
       </activation>
       <properties>
@@ -141,7 +141,6 @@
         </os>
       </activation>
       <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
         <swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
       </properties>
     </profile>
@@ -155,11 +154,11 @@
         </os>
       </activation>
       <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
         <swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
+        <swt.version>3.108.0</swt.version>
       </properties>
     </profile>
-        <profile>
+    <profile>
       <id>windows64</id>
       <activation>
         <os>
@@ -168,7 +167,7 @@
         </os>
       </activation>
       <properties>
-        <swt.groupId>org.eclipse.swt</swt.groupId>
+        <swt.groupId>org.eclipse.platform</swt.groupId>
         <swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
       </properties>
     </profile>
